@@ -1,3 +1,13 @@
+2012-11-12  Pekka Enberg  <penberg@kernel.org>
+
+	* gnu/testlet/java/lang/Object/classInfo/getConstructors.java:
+	* gnu/testlet/java/lang/Object/classInfo/getDeclaredConstructors.java:
+	* gnu/testlet/java/lang/Object/classInfo/getDeclaredFields.java:
+	* gnu/testlet/java/lang/Object/classInfo/getDeclaredMethods.java:
+	* gnu/testlet/java/lang/Object/classInfo/getFields.java:
+	* gnu/testlet/java/lang/Object/classInfo/getMethods.java:
+	Fixed to work on GNU Classpath.
+
 2012-11-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/Object/constructor.java:
